Update contents of library.properties

--- a/arduino-1.0.5/libraries/DualVNH5019MotorShield/library.properties
+++ b/arduino-1.0.5/libraries/DualVNH5019MotorShield/library.properties
@@ -1,11 +1,11 @@
-name=WebServer
+name=DualVNH5019
 version=1.0.0
-author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
-maintainer=Cristian Maglie <c.maglie@example.com>
-sentence=A library that makes coding a Webserver a breeze.
-paragraph=Supports HTTP1.1 and you can do GET and POST.
-category=Communication
-url=http://example.com/
-architectures=avr
-includes=WebServer.h
-depends=ArduinoHttpClient
+author=Polulu Robotics and Electronics
+maintainer=Polulu Robotics and Electronics
+sentence=This shield makes it easy to control two high-power DC motors with your Arduino or Arduino-compatible board.
+paragraph=This shield makes it easy to control two high-power DC motors with your Arduino or Arduino-compatible board. Its dual robust VNH5019 motor drivers operate from 5.5 to 24 V and can deliver a continuous 12 A (30 A peak) per motor, or a continuous 24 A (60 A peak) to a single motor connected to both channels.
+category=controller
+url=https://www.pololu.com/product/2507
+architectures=controller
+includes=DualVNH5019.h
+depends=
