--- a/arduino-1.0.5/libraries/SimpleMotion/library.properties
+++ b/arduino-1.0.5/libraries/SimpleMotion/library.properties
@@ -1,11 +1,11 @@
-name=WebServer
-version=1.0.0
-author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
-maintainer=Cristian Maglie <c.maglie@example.com>
-sentence=A library that makes coding a Webserver a breeze.
-paragraph=Supports HTTP1.1 and you can do GET and POST.
-category=Communication
-url=http://example.com/
-architectures=avr
-includes=WebServer.h
-depends=ArduinoHttpClient
+name=SimpleMotion 
+version=1.0.0 
+author=Granite Devices 
+maintainer=Granite Devices 
+sentence=opensource motion control API  
+paragraph=SimpleMotion provides a lightweight, yet powerful command set ranging from common point-to-point positioning applications to synchronous multi-axis interpolated motion, and even hard real-time control for externally closed loop special applications .
+category= Controller
+url= https://github.com/GraniteDevices/SimpleMotionV2
+architectures= 
+includes= busdevice.h, rs232.h, simplemotion.h, simplemotion_defs.h, simplemotion_private.h, sm485.h
+depends= 
