--- a/arduino-1.0.5/libraries/digitalWriteFast/library.properties
+++ b/arduino-1.0.5/libraries/digitalWriteFast/library.properties
@@ -1,11 +1,11 @@
-name=WebServer
+name=digitalWriteFast
 version=1.0.0
-author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
-maintainer=Cristian Maglie <c.maglie@example.com>
-sentence=A library that makes coding a Webserver a breeze.
-paragraph=Supports HTTP1.1 and you can do GET and POST.
+author=Paul Stoffregen
+maintainer=Fernando Igor
+sentence=Higher speed Digital IO
+paragraph=Higher speed Digital IO
 category=Communication
-url=http://example.com/
-architectures=avr
-includes=WebServer.h
-depends=ArduinoHttpClient
+url=https://github.com/watterott/Arduino-Libs/tree/master/digitalWriteFast
+architectures=
+includes=digitalWriteFast.h
+depends=
