--- a/arduino-1.0.5/libraries/HX711/library.properties
+++ b/arduino-1.0.5/libraries/HX711/library.properties
@@ -1,11 +1,11 @@
-name=WebServer
+name=
 version=1.0.0
-author=Cristian Maglie <c.maglie@example.com>, Pippo Pluto <pippo@example.com>
-maintainer=Cristian Maglie <c.maglie@example.com>
-sentence=A library that makes coding a Webserver a breeze.
-paragraph=Supports HTTP1.1 and you can do GET and POST.
-category=Communication
-url=http://example.com/
-architectures=avr
-includes=WebServer.h
-depends=ArduinoHttpClient
+author=Avia
+maintainer=Bodge https://github.com/bogde
+sentence=An Arduino library to interface the Avia Semiconductor HX711 24-Bit Analog-to-Digital Converter (ADC) for reading load cells / weight scales.
+paragraph=An Arduino library to interface the Avia Semiconductor HX711 24-Bit Analog-to-Digital Converter (ADC) for reading load cells / weight scales.
+category=Signal IO
+url=https://github.com/bogde/HX711
+architectures=
+includes=HX711.h
+depends=
